# stock-agents

./: .gitignore  CLAUDE.md  GOAL_PROMPT.md  LICENSE  README.md  V2_ADDENDUM_FORENSIC.md  V2_BUILD_SPEC.md  start.bat  start.command
stock_agents/: .env.example  .gitignore  README.md  pyproject.toml
stock_agents/docs/: iteration_notes.md  v2_decisions.md
stock_agents/examples/: ai_infrastructure.py
stock_agents/src/stock_agents/: __init__.py  cli.py  config.py
stock_agents/src/stock_agents/agents/: __init__.py  balance_sheet.py  base.py  claude_code_backend.py  etf_screener.py  forensic.py  fundamentals.py  macro_overlay.py  management.py  orchestrator.py  peer_comparison.py  stress_test.py  synthesizer.py
stock_agents/src/stock_agents/api/: __init__.py  main.py  schemas.py
stock_agents/src/stock_agents/automation/: __init__.py  runner.py
stock_agents/src/stock_agents/backtesting/: __init__.py  harness.py  point_in_time.py
stock_agents/src/stock_agents/data/: __init__.py  _http.py  cache.py  edgar.py  etf.py  fmp.py  metrics.py  tiingo.py  transcripts.py
stock_agents/src/stock_agents/models/: __init__.py  analysis.py  company.py  thesis.py
stock_agents/tests/: conftest.py  test_agents.py  test_api.py  test_automation.py  test_backend.py  test_backtest.py  test_diff.py  test_edgar.py  test_etf.py  test_fmp.py  test_forensic.py  test_handlers.py  test_macro_overlay.py  test_peer_comparison.py  test_track.py  test_transcripts.py
stock_agents/tests/test_data/: fmp_balance_aapl.json  fmp_cashflow_aapl.json  fmp_income_aapl.json  form4_sample.xml
(+52 files in other folders)
