[project]
name = "stock-agents"
version = "0.1.0"
description = "Multi-agent equity research pipeline for finding asymmetric long opportunities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "diskcache>=5.6",
    "rich>=13.0",
    "typer>=0.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "claude-agent-sdk>=0.2.87",
    "sqlmodel>=0.0.38",
    "apscheduler>=3.11.2",
    "feedparser>=6.0.12",
    "fastapi>=0.136.3",
    "python-multipart>=0.0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-vcr>=1.0.2",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.6",
]

[project.scripts]
stockagents = "stock_agents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer relies on function-call defaults (typer.Option/Argument) by design.
ignore = ["E501", "B008"]

[tool.coverage.run]
source = ["src/stock_agents"]
branch = true
